fixed menu icon stuck at top

--- a/styles/Menu.module.css
+++ b/styles/Menu.module.css
@@ -8,7 +8,7 @@
         display: flex;
         height: 10vh;
         position: fixed;
-        z-index: 0;
+        z-index: 3;
         
     }
 
