--- a/styles/MenuLinks.module.css
+++ b/styles/MenuLinks.module.css
@@ -2,6 +2,8 @@
 .container{
     display: flex;
     flex-direction: column;
+    position: fixed;
+    z-index: 2;
     align-items: center;
     justify-content: center;
     height: 100vh;
